added new content type memebers

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,17 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Tags", name: "tags", widget: "list"}
 
+  - name: "members"
+    label: "Members"
+    folder: "src/pages/members"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "member-page"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "markdown"}
+      - {label: "Image", name: "image", widget: image}
+
   - name: "pages"
     label: "Pages"
     files:
