--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "bulma": "^0.7.0",
     "disqus-react": "^1.0.7",
     "gatsby": "^2.13.31",
@@ -28,9 +29,11 @@
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
+    "query-string": "^6.8.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.7.0",
     "react-share": "^3.0.1",
     "react-twitter-embed": "^2.0.8",
     "uuid": "^3.2.1"
