added associate memebers compoennt

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -38,11 +38,11 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "member-page"}
+      - {label: "Template Key", name: "templateKey", widget: "string", default: "associate-member-page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Image", name: "image", widget: image}
-      
+
   - name: "pages"
     label: "Pages"
     files:
