--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.7.0",
+    "react-reveal": "^1.2.2",
     "react-share": "^3.0.1",
     "react-twitter-embed": "^2.0.8",
     "uuid": "^3.2.1"
