--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-lazyload": "^2.6.2",
     "react-reveal": "^1.2.2",
     "react-share": "^3.0.1",
+    "react-slick": "^0.25.2",
     "react-twitter-embed": "^2.0.8",
     "uuid": "^3.2.1"
   },
